--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
-language: bash
+language: java
+addons:
+  apt:
+    update: true
 env:
   global:
     - UPGRADLE_VERSION=0.1.0
-    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
-    - GRAVIS="$HOME/gravis"
+#    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
+#    - GRAVIS="$HOME/gravis"
 install:
-  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
-  - source $GRAVIS/install-jdk
+#  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
+#  - source $GRAVIS/install-jdk
   - curl -sL --retry 10 --retry-connrefused https://github.com/DanySK/upgradle/releases/download/v$UPGRADLE_VERSION/upgradle-$UPGRADLE_VERSION-all.jar --output $HOME/upgradle.jar
 script:
   - java -jar upgradle.jar
