download in TRAVIS_BUILD_DIR

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ env:
 install:
 #  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
 #  - source $GRAVIS/install-jdk
-  - curl -sL --retry 10 --retry-connrefused https://github.com/DanySK/upgradle/releases/download/v$UPGRADLE_VERSION/upgradle-$UPGRADLE_VERSION-all.jar --output $HOME/upgradle.jar
+  - curl -sL --retry 10 --retry-connrefused https://github.com/DanySK/upgradle/releases/download/v$UPGRADLE_VERSION/upgradle-$UPGRADLE_VERSION-all.jar --output $TRAVIS_BUILD_DIR/upgradle.jar
 script:
-  - java -jar upgradle.jar
+  - java -jar $TRAVIS_BUILD_DIR/upgradle.jar
