--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
 #  - source $GRAVIS/install-jdk
   - curl -sL --retry 10 --retry-connrefused https://github.com/DanySK/upgradle/releases/download/v$UPGRADLE_VERSION/upgradle-$UPGRADLE_VERSION-all.jar --output $TRAVIS_BUILD_DIR/upgradle.jar
 script:
-  - java -jar $TRAVIS_BUILD_DIR/upgradle.jar
+  - java -jar $TRAVIS_BUILD_DIR/upgradle.jar $TRAVIS_BUILD_DIR/upgradle.yml
