--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION=0.1.1
+    - UPGRADLE_VERSION="upgradle-0.1.1-dev04+25ddeb3"
 #    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
 #    - GRAVIS="$HOME/gravis"
 install:
