--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,17 @@ addons:
 env:
   global:
     - UPGRADLE_VERSION="0.1.3"
+    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
+    - GRAVIS="$HOME/gravis"
 install:
   - curl -sL --retry 10 --retry-connrefused "https://github.com/DanySK/upgradle/releases/download/v${UPGRADLE_VERSION}/upgradle-${UPGRADLE_VERSION}-all.jar" --output $TRAVIS_BUILD_DIR/upgradle.jar
 script:
   - travis_retry java -jar $TRAVIS_BUILD_DIR/upgradle.jar $TRAVIS_BUILD_DIR/upgradle.yml
+
+before_cache:
+  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
+  - $GRAVIS/clean-gradle-cache
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
