--- a/upgradle.yml
+++ b/upgradle.yml
@@ -11,6 +11,7 @@ excludes:
   - owners: DanySK
     repos:
       - alchemist-approximatemodelchecking
+      - Bug-.*
       - Experiment-2019-LMCS-Share
 modules:
   - GradleWrapper
