--- a/upgradle.yml
+++ b/upgradle.yml
@@ -13,6 +13,7 @@ excludes:
       - alchemist-approximatemodelchecking
       - Bug-.*
       - Experiment-2019-LMCS-Share
+      - GoIV
 modules:
   - GradleWrapper
   - RefreshVersions
