--- a/upgradle.yml
+++ b/upgradle.yml
@@ -1,6 +1,6 @@
 includes:
   - owners: DanySK
-    repos: (upgradle|^[0-H].*)
+    repos: (upgradle|^[0-L].*)
     branches:
       - master
 excludes:
