Fix experiment exclusion regex

--- a/upgradle.yml
+++ b/upgradle.yml
@@ -12,7 +12,7 @@ excludes:
     repos:
       - alchemist-approximatemodelchecking
       - Bug-.*
-      - Experiment-*
+      - Experiment-.*
       - GoIV
 modules:
   - GradleWrapper
