--- a/upgradle.yml
+++ b/upgradle.yml
@@ -14,6 +14,7 @@ excludes:
       - Bug-.*
       - Experiment-.*
       - GoIV
+      - PokeGOAPI-Java
 modules:
   - GradleWrapper
   - RefreshVersions
