No need to aggressively update papers

--- a/upgradle.yml
+++ b/upgradle.yml
@@ -16,6 +16,7 @@ excludes:
       - Bug-.*
       - Experiment-.*
       - GoIV
+      - Paper-.*
       - PokeGOAPI-Java
       - Protelis
       - SmarTrRR
