--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION="0.1.4-dev0b+ffc2faa"
+    - UPGRADLE_VERSION="0.1.5-dev07+88b058b"
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
 install:
