Do not run on urlclassloader-util

--- a/upgradle.yml
+++ b/upgradle.yml
@@ -30,6 +30,7 @@ excludes:
       - PokeGOAPI-Java
       - Protelis
       - SmarTrRR
+      - urlclassloader-util
   # Master excluded
   - owners: .*
     branches: master
