Do not run on protelis-lora-mqtt

--- a/upgradle.yml
+++ b/upgradle.yml
@@ -29,6 +29,7 @@ excludes:
       - Paper-.*
       - PokeGOAPI-Java
       - Protelis
+      - protelis-lora-mqtt
       - SmarTrRR
       - urlclassloader-util
   # Master excluded
