--- a/upgradle.yml
+++ b/upgradle.yml
@@ -53,6 +53,7 @@ excludes:
       - protelis-lora-mqtt
       - sabayon-distro
       - SmarTrRR
+      - Student(\s*|-*)Project
       - tornadofx
       - travis-testing-playground
       - urlclassloader-util
