--- a/upgradle.yml
+++ b/upgradle.yml
@@ -7,12 +7,12 @@ includes:
 excludes:
   # Total exclusion by owner
   - owners:
+      - Collaboration-2020-Impresoft
       - ggraffieti
       - NGPS2019
       - Placu95
       - Spacco
       - Vuksaa
-      - Collaboration-2020-Impresoft
     repos: .*
     branches: .*
   # Master exclusion for Alchemist (development on develop branch)
@@ -66,6 +66,7 @@ excludes:
     branches: master
     repos:
       - AGCT
+      - Area-4.0-server-infrastructure
       - DingNet-Protelis
       - Protelis
       - Protelis-Parser
