--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION="0.2.1-dev01+501b53f"
+    - UPGRADLE_VERSION="v0.2.2-dev0y+2cc898f"
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
 install:
