--- a/upgradle.yml
+++ b/upgradle.yml
@@ -85,7 +85,7 @@ modules:
       versionRegex: \d+(\.\d+)*
   - name: RefreshVersions
     options:
-      strategy: all
+      strategy: next, latest
       versionRegex: \d+(\.\d+)*
 
 labels:
