Switch to 0.3.0, try next + latest

--- a/upgradle.yml
+++ b/upgradle.yml
@@ -85,7 +85,9 @@ modules:
       versionRegex: \d+(\.\d+)*
   - name: RefreshVersions
     options:
-      strategy: all
+      strategy:
+        - next
+        - latest
       versionRegex: \d+(\.\d+)*
 
 labels:
