Try fixes from the unstable 0.3.0-dev04+73cf0f5

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION="0.3.0"
+    - UPGRADLE_VERSION="0.3.0-dev04+73cf0f5"
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
 install:
