--- a/upgradle.yml
+++ b/upgradle.yml
@@ -88,7 +88,7 @@ modules:
       strategy:
         - next
         - latest
-      versionRegex: \d+(\.\d+)*
+      versionRegex: v?\d+(?:\.\d+)*(:?-jre)?(:?-android)?
 
 labels:
   name: version-upgrade
