--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION="0.3.2"
+    - UPGRADLE_VERSION="0.3.1-dev0w+1c491cf"
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
 install:
