--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
     update: true
 env:
   global:
-    - UPGRADLE_VERSION="0.3.1-dev0z+936fb2d"
+    - UPGRADLE_VERSION="0.3.1-dev11+afb111f"
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
 install:
