--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,7 +12,9 @@ on:
   check_suite:
     types:
       - completed
-  status: {}
+  schedule:
+    - cron: '0 0 * * *'
+  status:
 jobs:
   automerge:
     runs-on: ubuntu-latest
