--- a/.github/workflows/upgradle.yml
+++ b/.github/workflows/upgradle.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
           configuration_file: upgradle.yml
-          version: 0.3.1-dev11+afb111f
+          version: 0.3.4
