--- a/upgradle.yml
+++ b/upgradle.yml
@@ -77,6 +77,7 @@ excludes:
       - DingNet-Protelis
       - Protelis
       - Protelis-Parser
+      - Orchid
 
 modules:
   - name: GradleWrapper
